--- a/drivers/thermal/Kconfig
+++ b/drivers/thermal/Kconfig
@@ -190,17 +190,36 @@ config LIMITS_LITE_HW
 	 supported by LMH Lite, their throttling intensity and the operating
 	 profiles.
 
+choice
+	prompt "Default thermal state monitor"
+	default NONE_TH_MONITOR
+
+config NONE_TH_MONITOR
+	bool "Do not use the thermal monitor"
+
 config THERMAL_MONITOR
 	bool "Monitor thermal state and limit CPU Frequency"
 	depends on THERMAL_TSENS8974
 	depends on CPU_FREQ || CPU_FREQ_MSM
 	depends on PM_OPP
-	default n
 	help
 	  This enables thermal monitoring capability in the kernel in the
 	  absence of a system wide thermal monitoring entity or until such an
 	  entity starts running in the userspace. Monitors TSENS temperature
 	  and limits the max frequency of the cores.
+
+config THERMAL_MONITOR_SIMPLE
+	bool "Simple solution to monitor CPU temp and limit CPU Frequency"
+	depends on THERMAL_TSENS8960 || THERMAL_TSENS8974
+	depends on CPU_FREQ_MSM
+	help
+	  This enables thermal monitoring capability in the kernel in the
+	  absence of a system wide thermal monitoring entity. Monitors temperature
+	  via a specified ADC channel on the VADC device, and limits the max frequency
+	  of the CPU cores accordingly. The code is simple, allows for multiple throttling
+	  steps, and is completely configurable via sysfs.
+
+endchoice
 
 config IMX_THERMAL
 	tristate "Temperature sensor driver for Freescale i.MX SoCs"
