MIDO:defconfig: enable Multi-core automatic hotplug support

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -3795,6 +3795,7 @@ CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
 # CONFIG_MSM_SERVICE_LOCATOR is not set
 # CONFIG_MSM_QBT1000 is not set
 # CONFIG_MSM_PACMAN is not set
+CONFIG_ASMP=y
 # CONFIG_MSM_REMOTEQDSS is not set
 # CONFIG_QCOM_SMCINVOKE is not set
 CONFIG_SERIAL_NUM=y
