--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -288,16 +288,20 @@ CONFIG_BLOCK_COMPAT=y
 CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_SIOPLUS=y
 # CONFIG_IOSCHED_BFQ is not set
 CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_SWITCHER=y
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_CFQ is not set
+# CONFIG_DEFAULT_MAPLE is not set
+# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
-# CONFIG_DEFAULT_SIOPLUS is not set
+CONFIG_DEFAULT_SIOPLUS=y
 # CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_ZEN is not set
@@ -489,11 +493,7 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
 CONFIG_PM_RUNTIME=y
 CONFIG_PM=y
-CONFIG_PM_DEBUG=y
-# CONFIG_PM_ADVANCED_DEBUG is not set
-# CONFIG_PM_TEST_SUSPEND is not set
-CONFIG_PM_SLEEP_DEBUG=y
-# CONFIG_DPM_WATCHDOG is not set
+# CONFIG_PM_DEBUG is not set
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
@@ -1125,7 +1125,6 @@ CONFIG_OF_PCI_IRQ=y
 CONFIG_OF_SPMI=y
 CONFIG_OF_RESERVED_MEM=y
 CONFIG_OF_SLIMBUS=y
-CONFIG_OF_CORESIGHT=y
 CONFIG_OF_BATTERYDATA=y
 # CONFIG_OF_OVERLAY is not set
 # CONFIG_PARPORT is not set
@@ -3912,27 +3911,7 @@ CONFIG_MSM_IRQ=y
 # CONFIG_IPACK_BUS is not set
 # CONFIG_RESET_CONTROLLER is not set
 # CONFIG_FMC is not set
-CONFIG_CORESIGHT=y
-CONFIG_CORESIGHT_EVENT=y
-CONFIG_HAVE_CORESIGHT_SINK=y
-CONFIG_CORESIGHT_FUSE=y
-CONFIG_CORESIGHT_CTI=y
-CONFIG_CORESIGHT_CTI_SAVE_DISABLE=y
-CONFIG_CORESIGHT_CSR=y
-CONFIG_CORESIGHT_TMC=y
-CONFIG_CORESIGHT_TPIU=y
-CONFIG_CORESIGHT_FUNNEL=y
-CONFIG_CORESIGHT_REPLICATOR=y
-# CONFIG_CORESIGHT_TPDA is not set
-# CONFIG_CORESIGHT_TPDM is not set
-# CONFIG_CORESIGHT_DBGUI is not set
-CONFIG_CORESIGHT_STM=y
-# CONFIG_CORESIGHT_STM_DEFAULT_ENABLE is not set
-CONFIG_CORESIGHT_HWEVENT=y
-# CONFIG_CORESIGHT_ETM is not set
-# CONFIG_CORESIGHT_ETMV4 is not set
-# CONFIG_CORESIGHT_REMOTE_ETM is not set
-# CONFIG_CORESIGHT_QPDI is not set
+# CONFIG_CORESIGHT is not set
 
 #
 # PHY Subsystem
@@ -4175,7 +4154,7 @@ CONFIG_NLS_UTF8=y
 # printk and dmesg options
 #
 CONFIG_PRINTK_TIME=y
-CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
+CONFIG_MESSAGE_LOGLEVEL_DEFAULT=1
 # CONFIG_LOG_BUF_MAGIC is not set
 # CONFIG_BOOT_PRINTK_DELAY is not set
 # CONFIG_DYNAMIC_DEBUG is not set
@@ -4252,7 +4231,7 @@ CONFIG_DEBUG_PREEMPT=y
 CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_KOBJECT is not set
 CONFIG_HAVE_DEBUG_BUGVERBOSE=y
-CONFIG_DEBUG_BUGVERBOSE=y
+# CONFIG_DEBUG_BUGVERBOSE is not set
 # CONFIG_DEBUG_LIST is not set
 # CONFIG_DEBUG_PI_LIST is not set
 # CONFIG_DEBUG_SG is not set
@@ -4287,6 +4266,7 @@ CONFIG_CONTEXT_SWITCH_TRACER=y
 CONFIG_IPC_LOGGING=y
 CONFIG_TRACING=y
 CONFIG_GENERIC_TRACER=y
+CONFIG_DISABLE_TRACE_PRINTK=y
 CONFIG_TRACING_SUPPORT=y
 CONFIG_FTRACE=y
 CONFIG_FUNCTION_TRACER=y
@@ -4339,8 +4319,6 @@ CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # CONFIG_FREE_PAGES_RDONLY is not set
 CONFIG_DEBUG_RODATA=y
 # CONFIG_DEBUG_ALIGN_RODATA is not set
-# CONFIG_CORESIGHT_LINKS_AND_SINKS is not set
-# CONFIG_CORESIGHT_SOURCE_ETM4X is not set
 
 #
 # Security options
