--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -531,6 +531,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_RELAXED is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -538,6 +539,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 # CONFIG_CPUFREQ_DT is not set
+CONFIG_CPU_FREQ_GOV_RELAXED=y
 # CONFIG_CPU_BOOST is not set
 
 #
@@ -3744,10 +3746,10 @@ CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
 # CONFIG_MSM_SERVICE_LOCATOR is not set
 # CONFIG_MSM_QBT1000 is not set
 # CONFIG_MSM_PACMAN is not set
-CONFIG_ASMP=y
 # CONFIG_MSM_REMOTEQDSS is not set
 # CONFIG_QCOM_SMCINVOKE is not set
 CONFIG_SERIAL_NUM=y
+CONFIG_STATE_NOTIFIER=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_SOC_TI is not set
 CONFIG_CLKDEV_LOOKUP=y
@@ -4474,11 +4476,5 @@ CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
-
-#
-# CPU Hotplug
-#
-# CONFIG_NONE_HOTPLUG is not set
 CONFIG_ASMP=y
-# CONFIG_ZEN_DECISION is not set
 
