--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -3667,6 +3667,59 @@ CONFIG_MACH_XIAOMI_MSM8953=y
 # Xiaomi board selection
 #
 CONFIG_MACH_XIAOMI_MIDO=y
+CONFIG_CLKDEV_LOOKUP=y
+CONFIG_HAVE_CLK_PREPARE=y
+CONFIG_MSM_CLK_CONTROLLER_V2=y
+CONFIG_MSM_MDSS_PLL=y
+CONFIG_HWSPINLOCK=y
+
+#
+# Hardware Spinlock drivers
+#
+CONFIG_REMOTE_SPINLOCK_MSM=y
+
+#
+# Clock Source drivers
+#
+CONFIG_CLKSRC_OF=y
+CONFIG_ARM_ARCH_TIMER=y
+CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
+# CONFIG_ATMEL_PIT is not set
+# CONFIG_SH_TIMER_CMT is not set
+# CONFIG_SH_TIMER_MTU2 is not set
+# CONFIG_SH_TIMER_TMU is not set
+# CONFIG_EM_TIMER_STI is not set
+# CONFIG_CLKSRC_VERSATILE is not set
+# CONFIG_MAILBOX is not set
+CONFIG_IOMMU_API=y
+CONFIG_IOMMU_SUPPORT=y
+
+#
+# Generic IOMMU Pagetable Support
+#
+CONFIG_IOMMU_IO_PGTABLE=y
+CONFIG_IOMMU_IO_PGTABLE_LPAE=y
+# CONFIG_IOMMU_IO_PGTABLE_LPAE_SELFTEST is not set
+# CONFIG_IOMMU_IO_PGTABLE_FAST is not set
+CONFIG_OF_IOMMU=y
+CONFIG_MSM_IOMMU=y
+CONFIG_MSM_IOMMU_V1=y
+# CONFIG_IOMMU_LPAE is not set
+# CONFIG_IOMMU_AARCH64 is not set
+# CONFIG_MSM_IOMMU_VBIF_CHECK is not set
+# CONFIG_IOMMU_NON_SECURE is not set
+# CONFIG_IOMMU_FORCE_4K_MAPPINGS is not set
+CONFIG_ARM_SMMU=y
+# CONFIG_IOMMU_DEBUG is not set
+
+#
+# Remoteproc drivers
+#
+# CONFIG_STE_MODEM_RPROC is not set
+
+#
+# Rpmsg drivers
+#
 
 #
 # SOC (System On Chip) specific Drivers
@@ -3755,63 +3808,6 @@ CONFIG_SERIAL_NUM=y
 CONFIG_STATE_NOTIFIER=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_SOC_TI is not set
-CONFIG_CLKDEV_LOOKUP=y
-CONFIG_HAVE_CLK_PREPARE=y
-CONFIG_MSM_CLK_CONTROLLER_V2=y
-CONFIG_MSM_MDSS_PLL=y
-CONFIG_HWSPINLOCK=y
-
-#
-# Hardware Spinlock drivers
-#
-CONFIG_REMOTE_SPINLOCK_MSM=y
-
-#
-# Clock Source drivers
-#
-CONFIG_CLKSRC_OF=y
-CONFIG_ARM_ARCH_TIMER=y
-CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
-# CONFIG_ATMEL_PIT is not set
-# CONFIG_SH_TIMER_CMT is not set
-# CONFIG_SH_TIMER_MTU2 is not set
-# CONFIG_SH_TIMER_TMU is not set
-# CONFIG_EM_TIMER_STI is not set
-# CONFIG_CLKSRC_VERSATILE is not set
-# CONFIG_MAILBOX is not set
-CONFIG_IOMMU_API=y
-CONFIG_IOMMU_SUPPORT=y
-
-#
-# Generic IOMMU Pagetable Support
-#
-CONFIG_IOMMU_IO_PGTABLE=y
-CONFIG_IOMMU_IO_PGTABLE_LPAE=y
-# CONFIG_IOMMU_IO_PGTABLE_LPAE_SELFTEST is not set
-# CONFIG_IOMMU_IO_PGTABLE_FAST is not set
-CONFIG_OF_IOMMU=y
-CONFIG_MSM_IOMMU=y
-CONFIG_MSM_IOMMU_V1=y
-# CONFIG_IOMMU_LPAE is not set
-# CONFIG_IOMMU_AARCH64 is not set
-# CONFIG_MSM_IOMMU_VBIF_CHECK is not set
-# CONFIG_IOMMU_NON_SECURE is not set
-# CONFIG_IOMMU_FORCE_4K_MAPPINGS is not set
-CONFIG_ARM_SMMU=y
-# CONFIG_IOMMU_DEBUG is not set
-
-#
-# Remoteproc drivers
-#
-# CONFIG_STE_MODEM_RPROC is not set
-
-#
-# Rpmsg drivers
-#
-
-#
-# SOC (System On Chip) specific Drivers
-#
 CONFIG_PM_DEVFREQ=y
 
 #
@@ -4126,15 +4122,14 @@ CONFIG_MESSAGE_LOGLEVEL_DEFAULT=1
 CONFIG_ENABLE_WARN_DEPRECATED=y
 CONFIG_ENABLE_MUST_CHECK=y
 CONFIG_FRAME_WARN=2048
-# CONFIG_STRIP_ASM_SYMS is not set
+CONFIG_STRIP_ASM_SYMS=y
 # CONFIG_UNUSED_SYMBOLS is not set
 CONFIG_DEBUG_FS=y
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 CONFIG_ARCH_WANT_FRAME_POINTERS=y
 CONFIG_FRAME_POINTER=y
-CONFIG_MAGIC_SYSRQ=y
-CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=0x1
+# CONFIG_MAGIC_SYSRQ is not set
 # CONFIG_DEBUG_KERNEL is not set
 
 #
@@ -4479,5 +4474,11 @@ CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
+
+#
+# CPU Hotplug
+#
+# CONFIG_NONE_HOTPLUG is not set
 CONFIG_ASMP=y
+# CONFIG_ZEN_DECISION is not set
 
