Revert "Introduce Adreno idler for devfreq-based Adreno devices"
This reverts commit fd721c7a8ab8996d3e778481ed52df9021113c66.

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -4474,3 +4474,11 @@ CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
+
+#
+# CPU Hotplug
+#
+# CONFIG_NONE_HOTPLUG is not set
+CONFIG_ASMP=y
+# CONFIG_ZEN_DECISION is not set
+
