--- a/arch/arm64/hotplug/Kconfig
+++ b/arch/arm64/hotplug/Kconfig
@@ -14,3 +14,12 @@ config ASMP
 	  For MPU based protection-enabled targets please refer to
 	  MSM_KERNEL_PROTECT_MPU
 
+if ASMP
+
+config ASMP_SUSPEND
+	bool "Enable PowerSuspend/EarlySuspend support for ASMP"
+	depends on ASMP
+	default y
+
+endif
+
