--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -1699,6 +1699,7 @@ CONFIG_MSM_SMD_PKT=y
 CONFIG_MSM_ADSPRPC=y
 # CONFIG_MSM_MDSP_TS is not set
 # CONFIG_MSM_RDBG is not set
+# CONFIG_FRANDOM is not set
 
 #
 # I2C support
