--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -582,6 +582,13 @@ config QPNP_MISC
 	  and the driver provides an API to check if this interrupt
 	  is available on the current PMIC chip.
 
+config UID_SYS_STATS_DEBUG
+	bool "Per-TASK statistics"
+	depends on UID_SYS_STATS
+	default n
+	help
+	  Per TASK based io statistics exported to /proc/uid_io
+
 config FORCE_FAST_CHARGE
 	bool "Force faster charge rate for USB"
 	default n
