--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-SaveEnergy(v3)"
+CONFIG_LOCALVERSION="-SaveEnergy-v3"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -211,6 +211,7 @@ CONFIG_HAVE_ARCH_TRACEHOOK=y
 CONFIG_HAVE_DMA_ATTRS=y
 CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_GENERIC_SMP_IDLE_THREAD=y
+CONFIG_ARCH_THREAD_INFO_ALLOCATOR=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
 CONFIG_HAVE_PERF_REGS=y
@@ -283,7 +284,7 @@ CONFIG_BLOCK_COMPAT=y
 #
 # IO Schedulers
 #
-CONFIG_IOSCHED_NOOP=y
+# CONFIG_IOSCHED_NOOP is not set
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_MAPLE=y
@@ -293,12 +294,9 @@ CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_SIOPLUS=y
 # CONFIG_IOSCHED_BFQ is not set
 CONFIG_IOSCHED_ZEN=y
-CONFIG_IOSCHED_SWITCHER=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_MAPLE is not set
-# CONFIG_DEFAULT_BFQ is not set
-# CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_SIOPLUS=y
 # CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_FIOPS is not set
@@ -608,7 +606,6 @@ CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_TCP_CONG_WESTWOOD=y
-CONFIG_TCP_CONG_ASCAREX=y
 CONFIG_TCP_CONG_HTCP=y
 # CONFIG_TCP_CONG_HSTCP is not set
 # CONFIG_TCP_CONG_HYBLA is not set
@@ -4291,11 +4288,5 @@ CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
-
-#
-# CPU Hotplug
-#
-# CONFIG_NONE_HOTPLUG is not set
 CONFIG_ASMP=y
-# CONFIG_ZEN_DECISION is not set
 CONFIG_ASMP_SUSPEND=y
