small add after https://github.com/BrateloSlava/M-Kernel-3/commit/496b49d3e32263a29926c890cbdd5c743efb2286

--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -17,7 +17,7 @@ GZFLAGS		:=-9
 
 KBUILD_DEFCONFIG := defconfig
 
-GEN_OPT_FLAGS := $(call cc-option,-mcpu=cortex-a53+crc+crypto) \
+GEN_OPT_FLAGS := $(call cc-option,-mtune=cortex-a53) \
  -g0 \
  -DNDEBUG \
  -fomit-frame-pointer \
