--- a/arch/arm/boot/dts/qcom/msm8953-regulator.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8953-regulator.dtsi
@@ -17,8 +17,8 @@
 	rpm-regulator-smpa1 {
 		status = "okay";
 		pm8953_s1: regulator-s1 {
-			regulator-min-microvolt = <870000>;
-			regulator-max-microvolt = <1156000>;
+			regulator-min-microvolt = <0xc3500>;
+			regulator-max-microvolt = <0x116520>;
 			qcom,init-voltage = <1000000>;
 			status = "okay";
 		};
@@ -287,7 +287,7 @@
 	rpm-regulator-ldoa22 {
 		status = "okay";
 		pm8953_l22: regulator-l22 {
-			regulator-min-microvolt = <2800000>;
+			regulator-min-microvolt = <0x1ab3f0>;
 			regulator-max-microvolt = <2800000>;
 			qcom,init-voltage = <2800000>;
 			status = "okay";
