mido: defconfig: enable CONFIG_MEMORY_STATE_TIME

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -1195,6 +1195,7 @@ CONFIG_USB_EXT_TYPE_C_PERICOM=y
 # CONFIG_TI_DRV2667 is not set
 # CONFIG_QPNP_MISC is not set
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_MEMORY_STATE_TIME=y
 # CONFIG_C2PORT is not set
 
 #
