mido_defconfig: regenerate to v4.1-dev (powersuspend)

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-SaveEnergy-v3.6"
+CONFIG_LOCALVERSION="-SaveEnergy-v4.1-dev"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -4170,7 +4170,7 @@ CONFIG_PANIC_ON_RECURSIVE_FAULT=y
 #
 CONFIG_STACKTRACE=y
 CONFIG_HAVE_DEBUG_BUGVERBOSE=y
-CONFIG_DEBUG_BUGVERBOSE=y
+# CONFIG_DEBUG_BUGVERBOSE is not set
 
 #
 # RCU Debugging
