--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -4492,6 +4492,7 @@ CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
-CONFIG_NONE_HOTPLUG=y
-# CONFIG_ASMP is not set
+# CONFIG_NONE_HOTPLUG is not set
+CONFIG_ASMP=y
 # CONFIG_LAZYPLUG is not set
+CONFIG_ASMP_SUSPEND=y
