--- a/arch/arm64/configs/miui_mido_defconfig
+++ b/arch/arm64/configs/miui_mido_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.67 Kernel Configuration
+# Linux/arm64 3.18.70 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-SaveEnergy-v3.5"
+CONFIG_LOCALVERSION="-SaveEnergy-v4.3-MIUI"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -93,7 +93,10 @@ CONFIG_HIGH_RES_TIMERS=y
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 CONFIG_IRQ_TIME_ACCOUNTING=y
 # CONFIG_BSD_PROCESS_ACCT is not set
-# CONFIG_TASKSTATS is not set
+CONFIG_TASKSTATS=y
+CONFIG_TASK_DELAY_ACCT=y
+CONFIG_TASK_XACCT=y
+CONFIG_TASK_IO_ACCOUNTING=y
 
 #
 # RCU Subsystem
@@ -314,7 +317,6 @@ CONFIG_IOSCHED_SIOPLUS=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
 CONFIG_IOSCHED_ZEN=y
-CONFIG_IOSCHED_SWITCHER=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_MAPLE is not set
@@ -408,9 +410,9 @@ CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
 # CONFIG_HZ_100 is not set
 # CONFIG_HZ_250 is not set
-CONFIG_HZ_300=y
-# CONFIG_HZ_1000 is not set
-CONFIG_HZ=300
+# CONFIG_HZ_300 is not set
+CONFIG_HZ_1000=y
+CONFIG_HZ=1000
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
@@ -454,6 +456,7 @@ CONFIG_CMA_AREAS=7
 CONFIG_ZSWAP=y
 CONFIG_ZPOOL=y
 CONFIG_ZBUD=y
+# CONFIG_Z3FOLD is not set
 CONFIG_ZSMALLOC=y
 # CONFIG_PGTABLE_MAPPING is not set
 # CONFIG_ZSMALLOC_STAT is not set
@@ -641,10 +644,12 @@ CONFIG_TCP_CONG_HTCP=y
 # CONFIG_TCP_CONG_YEAH is not set
 # CONFIG_TCP_CONG_ILLINOIS is not set
 # CONFIG_TCP_CONG_DCTCP is not set
+CONFIG_TCP_CONG_CDG=y
 # CONFIG_DEFAULT_BIC is not set
 # CONFIG_DEFAULT_CUBIC is not set
 # CONFIG_DEFAULT_HTCP is not set
 CONFIG_DEFAULT_WESTWOOD=y
+# CONFIG_DEFAULT_CDG is not set
 # CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
@@ -1208,11 +1213,12 @@ CONFIG_UID_STAT=y
 CONFIG_SRAM=y
 CONFIG_QSEECOM=y
 CONFIG_HDCP_QSEECOM=y
-CONFIG_UID_CPUTIME=y
+CONFIG_UID_SYS_STATS=y
 CONFIG_USB_EXT_TYPE_C_PERICOM=y
 # CONFIG_USB_EXT_TYPE_C_TI is not set
 # CONFIG_TI_DRV2667 is not set
 # CONFIG_QPNP_MISC is not set
+# CONFIG_UID_SYS_STATS_DEBUG is not set
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_MEMORY_STATE_TIME=y
 # CONFIG_C2PORT is not set
@@ -2324,7 +2330,9 @@ CONFIG_THERMAL_GOV_STEP_WISE=y
 CONFIG_THERMAL_TSENS8974=y
 CONFIG_LIMITS_MONITOR=y
 CONFIG_LIMITS_LITE_HW=y
+# CONFIG_NONE_TH_MONITOR is not set
 CONFIG_THERMAL_MONITOR=y
+# CONFIG_THERMAL_MONITOR_SIMPLE is not set
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
 
@@ -3832,8 +3840,7 @@ CONFIG_MSM_PIL_MSS_QDSP6V5=y
 CONFIG_MSM_SECURE_BUFFER=y
 CONFIG_ICNSS=y
 CONFIG_MSM_BAM_DMUX=y
-CONFIG_MSM_PERFORMANCE=y
-CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
+# CONFIG_MSM_PERFORMANCE is not set
 # CONFIG_MSM_POWER is not set
 # CONFIG_MSM_SERVICE_LOCATOR is not set
 # CONFIG_MSM_QBT1000 is not set
@@ -4194,7 +4201,7 @@ CONFIG_PANIC_ON_RECURSIVE_FAULT=y
 #
 CONFIG_STACKTRACE=y
 CONFIG_HAVE_DEBUG_BUGVERBOSE=y
-CONFIG_DEBUG_BUGVERBOSE=y
+# CONFIG_DEBUG_BUGVERBOSE is not set
 
 #
 # RCU Debugging
@@ -4532,4 +4539,3 @@ CONFIG_QMI_ENCDEC=y
 # CONFIG_NONE_HOTPLUG is not set
 CONFIG_ASMP=y
 # CONFIG_LAZYPLUG is not set
-CONFIG_ASMP_SUSPEND=y
