--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -440,6 +440,7 @@ CONFIG_CMA_AREAS=7
 CONFIG_ZSWAP=y
 CONFIG_ZPOOL=y
 CONFIG_ZBUD=y
+# CONFIG_Z3FOLD is not set
 CONFIG_ZSMALLOC=y
 # CONFIG_PGTABLE_MAPPING is not set
 # CONFIG_ZSMALLOC_STAT is not set
@@ -2310,8 +2311,8 @@ CONFIG_THERMAL_TSENS8974=y
 CONFIG_LIMITS_MONITOR=y
 CONFIG_LIMITS_LITE_HW=y
 # CONFIG_NONE_TH_MONITOR is not set
-CONFIG_THERMAL_MONITOR=y
-# CONFIG_THERMAL_MONITOR_SIMPLE is not set
+# CONFIG_THERMAL_MONITOR is not set
+CONFIG_THERMAL_MONITOR_SIMPLE=y
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
 
@@ -4498,4 +4499,3 @@ CONFIG_QMI_ENCDEC=y
 # CONFIG_NONE_HOTPLUG is not set
 CONFIG_ASMP=y
 # CONFIG_LAZYPLUG is not set
-
