mido_defconfig: enable F2FS_DEFAULT_INLINE_XATTR

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -4049,7 +4049,7 @@ CONFIG_F2FS_FS_ENCRYPTION=y
 # CONFIG_F2FS_IO_TRACE is not set
 # CONFIG_F2FS_FAULT_INJECTION is not set
 # CONFIG_F2FS_DEFAULT_NOINLINE_DENTRY is not set
-# CONFIG_F2FS_DEFAULT_INLINE_XATTR is not set
+CONFIG_F2FS_DEFAULT_INLINE_XATTR=y
 # CONFIG_F2FS_OPT3_OEM_MODS is not set
 # CONFIG_EFIVAR_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
