update config for MIUI

--- a/arch/arm64/configs/miui_mido_defconfig
+++ b/arch/arm64/configs/miui_mido_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.70 Kernel Configuration
+# Linux/arm64 3.18.72-rc1 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-SaveEnergy-v4.4-MIUI"
+CONFIG_LOCALVERSION="-SaveEnergy-v4.7-MIUI"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -256,10 +256,10 @@ CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
-CONFIG_MODULE_FORCE_LOAD=y
+# CONFIG_MODULE_FORCE_LOAD is not set
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
-# CONFIG_MODVERSIONS is not set
+CONFIG_MODVERSIONS=y
 # CONFIG_MODULE_SRCVERSION_ALL is not set
 # CONFIG_MODULE_SIG is not set
 # CONFIG_MODULE_COMPRESS is not set
@@ -2320,8 +2320,8 @@ CONFIG_THERMAL_TSENS8974=y
 CONFIG_LIMITS_MONITOR=y
 CONFIG_LIMITS_LITE_HW=y
 # CONFIG_NONE_TH_MONITOR is not set
-# CONFIG_THERMAL_MONITOR is not set
-CONFIG_THERMAL_MONITOR_SIMPLE=y
+CONFIG_THERMAL_MONITOR=y
+# CONFIG_THERMAL_MONITOR_SIMPLE is not set
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
 
@@ -4065,7 +4065,7 @@ CONFIG_F2FS_FS_ENCRYPTION=y
 # CONFIG_F2FS_IO_TRACE is not set
 # CONFIG_F2FS_FAULT_INJECTION is not set
 # CONFIG_F2FS_DEFAULT_NOINLINE_DENTRY is not set
-# CONFIG_F2FS_DEFAULT_INLINE_XATTR is not set
+CONFIG_F2FS_DEFAULT_INLINE_XATTR=y
 # CONFIG_F2FS_OPT3_OEM_MODS is not set
 # CONFIG_EFIVAR_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
