--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -284,7 +284,7 @@ config CPU_FREQ_GOV_NEBULA
           If in doubt, say N.
 
 config CPU_FREQ_GOV_IMPULSE
-	tristate "'interactive' cpufreq policy governor"
+	tristate "'impulse' cpufreq policy governor"
 	help
 	  'impulse' - This driver adds a dynamic cpufreq policy governor
 	  designed for latency-sensitive workloads.
