update defconfig. enable yankactive governor

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -551,6 +551,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ALUCARD is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_YANKACTIVE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
@@ -570,6 +571,7 @@ CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
 CONFIG_CPU_FREQ_GOV_ALUCARD=y
 # CONFIG_CPU_FREQ_GOV_BLU_ACTIVE is not set
+CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
 
 #
 # ARM CPU frequency scaling drivers
